	  data from an LCD correctly.
	* apps/examples/usbterm:  A USB terminal example.. more of a USB chat or
	  serial bridge:  Data received on local console echoed via USB serial; 
	  data received on USB serial is echoed on the local console.
	* apps/examples/touchscreen:  Add a simple, generic test for any
	  touschscreen driver.
	* Makefile:  The apps/ Makefile now checks for an apps/external directory
	  or symbolic link.  If such a directory/link exists (and has a Makefile),
	  it will be added to the apps/ build.  This allows external directories
	  to be included into the apps/ build by simply creating a symbolic link.

6.11 2011-11-12 Gregory Nutt <gnutt@nuttx.org>

	(No major changes from 6.10)

6.12 2011-12-06 Gregory Nutt <gnutt@nuttx.org>

	* apps/examples/buttons:  The button test can now be executed as an NSH
	  built in command.

6.13 2012-12-26 Gregory Nutt <gnutt@nuttx.org>

	* apps/examples/dhcpd: May now be built as an NSH built-in application
	  by setting CONFIG_NSH_BUILTIN_APPS.
	* apps/netutils/dhcpd/dhcpd.c: Fix several problems using host order address
	  where network addresses expected (and vice versa).
	* apps/examples/nettest: May now be built as an NSH built-in application
	  by setting CONFIG_NSH_BUILTIN_APPS.
	* apps/examples/nettest: Correct some build issues with the nettest is
	  built for performance evaluation.
	* apps/examples/adc:  Add a very simple test to drive and test an ADC
	  driver.
	* apps/examples/pwm:  Add an NSH PWM command to drive and test a PWM
	  driver.
	* apps/examples/can:  Add an NSH CAN command to drive and test a CAN
	  driver in loopback mode.

6.14 2012-01-15 Gregory Nutt <gnutt@nuttx.org>

	* apps/examples/buttons/main.c:  The test needs to call up_buttoninit() to
	  properly configure the button interrupt GPIOs.
	* apps/examples/pwm:  Add support to test the pulse count option recently
	  added to the PWM interface.

6.15 2012-xx-xx Gregory Nutt <gnutt@nuttx.org>