@@ -71,6 +71,9 @@ ifneq ($(CONFIG_NSH_DISABLESCRIPT),y)
 CSRCS	+= nsh_test.c
 endif
 
+ifneq ($(CONFIG_USBDEV),y)
+CSRCS	+= nsh_usbdev.c
+endif
 
 AOBJS		= $(ASRCS:.S=$(OBJEXT))
 COBJS		= $(CSRCS:.c=$(OBJEXT))
